[package]
name = "dbl-rs"
version = "0.1.1"
description = "API Bindings for discordbots.org"
readme = "README.md"
documentation = "https://docs.rs/dbl-rs"
repository = "https://github.com/nickelc/dbl-rs"
license = "MIT/Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["discord", "bots"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"

[lib]
name = "dbl"

[dependencies]
futures-util-preview = "=0.3.0-alpha.19"
reqwest = { version = "=0.10.0-alpha.1", features = ["json"] }
url = "2.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
tokio = "=0.2.0-alpha.6"
