[package]
name = "dbl-rs"
version = "0.2.0"
description = "API Bindings for top.gg / discordbots.org"
readme = "README.md"
documentation = "https://docs.rs/dbl-rs"
repository = "https://github.com/nickelc/dbl-rs"
license = "MIT/Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["discord", "bots"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"
include = ["src/**/*", "LICENSE-*", "README.md"]

[lib]
name = "dbl"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
futures-util = { version = "0.3", default-features = false }
url = "2.1"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
tokio = { version = "0.2.0", features = ["macros"] }
