[package]
name = "dbl-rs"
version = "0.3.2"
description = "API Bindings for top.gg / discordbots.org"
readme = "README.md"
documentation = "https://docs.rs/dbl-rs"
repository = "https://github.com/nickelc/dbl-rs"
license = "MIT/Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["discord", "bots"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"
include = ["src/**/*", "LICENSE-*", "README.md"]

[lib]
name = "dbl"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
url = "2.2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_test = "1"
