[package]
name = "webhook"
version = "0.1.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
edition = "2018"

[dependencies]
dbl-rs = { path = "../.." }
futures-util = "0.3.0"
warp = { git = "https://github.com/seanmonstar/warp.git" }
tokio = "0.2.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.0"
