[package]
name = "webhook"
version = "0.1.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
edition = "2018"

[dependencies]
dbl-rs = "0.2"
futures-util = "0.3.0"
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", default-features = false }

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.10.0"
features = ["json"]
